Update deployment with enhanced UI and footer

--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
         </nav>
     </header>
     <div id="content"></div>
+    <footer>
+        <p>Made with <span class="heart">❤</span> by <a href="https://github.com/bit2swaz" target="_blank" rel="noopener noreferrer">bit2swaz</a></p>
+    </footer>
 </body>
 </html> 
